// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhaseProgress Component renders correctly 1`] = `
.emotion-0 {
  border-left-width: 1px;
  height: 100%;
  z-index: 1;
}

.emotion-1 {
  border-left-color: #9e9e9e;
}

.emotion-2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.25rem;
}

<div>
  <div
    class="flexbox column "
  >
    <div
      class="progress-chart-container stepped-progress"
      style="background: none;"
    >
      Phase 1: 
      100
      % (
      1
       
      device
      )
      <div
        class="progress-chart detailed"
      >
        <div
          class="progress-step"
          style="width: 25%; height: 100%; position: absolute; left: 0%;"
        >
          <div
            class="flexbox"
            style="width: 100%;"
          >
            <div
              class="progress-bar green"
              style="width: 100%;"
            />
            <div
              class="progress-bar warning"
              style="width: 0%;"
            />
          </div>
          <div
            class="progress-step-number"
            style="align-self: flex-end; margin-bottom: -20px;"
          >
            download
          </div>
        </div>
        <div
          style="display: grid; row-gap: 4px; place-items: center; position: absolute; grid-template-rows: 45px 1.25rem min-content; left: 12.5%; width: 25%;"
        >
          <div
            class="emotion-0 emotion-1"
            style="border-left-style: solid;"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-2"
            data-testid="CheckCircleIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
            />
          </svg>
          <div />
        </div>
        <div
          class="progress-step"
          style="width: 25%; height: 100%; position: absolute; left: 25%;"
        >
          <div
            class="flexbox"
            style="width: 100%;"
          >
            <div
              class="progress-bar green"
              style="width: 0%;"
            />
            <div
              class="progress-bar warning"
              style="width: 0%;"
            />
          </div>
          <div
            class="progress-step-number"
            style="align-self: flex-end; margin-bottom: -20px;"
          >
            install
          </div>
        </div>
        <div
          style="display: grid; row-gap: 4px; place-items: center; position: absolute; grid-template-rows: 45px 1.25rem min-content; left: 37.5%; width: 25%;"
        >
          <div
            class="emotion-0 emotion-1"
            style="border-left-style: solid;"
          />
          <div />
          <div />
        </div>
        <div
          class="progress-step"
          style="width: 25%; height: 100%; position: absolute; left: 50%;"
        >
          <div
            class="flexbox"
            style="width: 100%;"
          >
            <div
              class="progress-bar green"
              style="width: 0%;"
            />
            <div
              class="progress-bar warning"
              style="width: 0%;"
            />
          </div>
          <div
            class="progress-step-number"
            style="align-self: flex-end; margin-bottom: -20px;"
          >
            reboot
          </div>
        </div>
        <div
          style="display: grid; row-gap: 4px; place-items: center; position: absolute; grid-template-rows: 45px 1.25rem min-content; left: 62.5%; width: 25%;"
        >
          <div
            class="emotion-0 emotion-1"
            style="border-left-style: solid;"
          />
          <div />
          <div />
        </div>
        <div
          class="progress-step"
          style="width: 25%; height: 100%; position: absolute; left: 75%;"
        >
          <div
            class="flexbox"
            style="width: 100%;"
          >
            <div
              class="progress-bar green"
              style="width: 0%;"
            />
            <div
              class="progress-bar warning"
              style="width: 0%;"
            />
          </div>
          <div
            class="progress-step-number"
            style="align-self: flex-end; margin-bottom: -20px;"
          >
            commit
          </div>
        </div>
        <div
          class="progress-step progress-step-total"
          style="height: 100%;"
        >
          <div
            class="progress-bar"
            style="position: initial; width: 110%;"
          />
        </div>
      </div>
    </div>
    <div
      class="margin-top"
    >
      Deployment is 
      <span
        class="uppercased"
      >
        Pending
      </span>
       with 
      0
       
      failures
    </div>
  </div>
</div>
`;

exports[`PhaseProgress Component renders correctly for list usage 1`] = `
.emotion-0 {
  margin-bottom: 8px;
}

.emotion-1 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: inherit;
}

.emotion-2 {
  margin: 4px;
}

.emotion-3 {
  border-left-width: 1px;
  height: 100%;
  z-index: 1;
}

.emotion-4 {
  border-left-color: #9e9e9e;
}

.emotion-5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.25rem;
}

<div>
  <div
    class="flexbox column progress-chart-container stepped-progress "
  >
    <div
      class="flexbox space-between emotion-0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-1"
        data-testid="PlayArrowIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M8 5v14l11-7z"
        />
      </svg>
      <div
        class="flexbox center-aligned"
      >
        0 failures
      </div>
    </div>
    <div
      class="muted slightly-smaller emotion-2"
    >
      Phase 1 of 1
    </div>
    <div
      class="progress-chart "
      style="max-width: 90%; min-height: 65px;"
    >
      <div
        class="progress-step"
        style="width: 25%; position: absolute; left: 0%;"
      >
        <div
          class="flexbox"
          style="width: 100%;"
        >
          <div
            class="progress-bar green"
            style="width: 100%;"
          />
          <div
            class="progress-bar warning"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        style="display: grid; row-gap: 4px; place-items: center; position: absolute; grid-template-rows: 20px 1.25rem min-content; left: 12.5%; width: 25%;"
      >
        <div
          class="emotion-3 emotion-4"
          style="border-left-style: solid;"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-5"
          data-testid="CheckCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
        <div
          class="capitalized slightly-smaller"
        >
          downloaded
        </div>
      </div>
      <div
        class="progress-step"
        style="width: 25%; position: absolute; left: 25%;"
      >
        <div
          class="flexbox"
          style="width: 100%;"
        >
          <div
            class="progress-bar green"
            style="width: 0%;"
          />
          <div
            class="progress-bar warning"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        style="display: grid; row-gap: 4px; place-items: center; position: absolute; grid-template-rows: 20px 1.25rem min-content; left: 37.5%; width: 25%;"
      >
        <div
          class="emotion-3 emotion-4"
          style="border-left-style: solid;"
        />
        <div />
        <div
          class="capitalized slightly-smaller"
        >
          installed
        </div>
      </div>
      <div
        class="progress-step"
        style="width: 25%; position: absolute; left: 50%;"
      >
        <div
          class="flexbox"
          style="width: 100%;"
        >
          <div
            class="progress-bar green"
            style="width: 0%;"
          />
          <div
            class="progress-bar warning"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        style="display: grid; row-gap: 4px; place-items: center; position: absolute; grid-template-rows: 20px 1.25rem min-content; left: 62.5%; width: 25%;"
      >
        <div
          class="emotion-3 emotion-4"
          style="border-left-style: solid;"
        />
        <div />
        <div
          class="capitalized slightly-smaller"
        >
          rebooted
        </div>
      </div>
      <div
        class="progress-step"
        style="width: 25%; position: absolute; left: 75%;"
      >
        <div
          class="flexbox"
          style="width: 100%;"
        >
          <div
            class="progress-bar green"
            style="width: 0%;"
          />
          <div
            class="progress-bar warning"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="progress-step progress-step-total"
      >
        <div
          class="progress-bar"
          style="position: initial; width: 110%;"
        />
      </div>
    </div>
  </div>
</div>
`;
